@@ -1,5 +1,5 @@
 Package: MTurkR
-Version: 0.7.3
+Version: 0.7.4
 Date: 2016-03-12
 Title: R Client for the MTurk Requester API
 Authors@R: c(person("Thomas J.", "Leeper", role = c("aut", "cre"),
